--- a/templates/home.html
+++ b/templates/home.html
@@ -91,9 +91,9 @@
             </select>
         </div>
         <div class="mb-3">
-            <label class="form-label">Math Score out of 100</label>
-            <input class="form-control" type="number" name="math_score"
-                placeholder="Enter your Math score" min='0' max='100' />
+            <label class="form-label">Writing Score out of 100</label>
+            <input class="form-control" type="number" name="reading_score"
+                placeholder="Enter your Reading score" min='0' max='100' />
         </div>
         <div class="mb-3">
             <label class="form-label">Reading Score out of 100</label>
@@ -101,7 +101,7 @@
                 placeholder="Enter your Reading Score" min='0' max='100' />
         </div>
         <div class="mb-3">
-            <input class="btn btn-primary" type="submit" value="Predict your Writing Score" required />
+            <input class="btn btn-primary" type="submit" value="Predict your Maths Score" required />
         </div>
     </form>
     <h2>
